[refactor]: add new function
